--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Matan Mazor"
-  avatar           : 
+  avatar           : "profile.png"
   bio              : "PhD student"
   location         : "London, UK"
   employer         :
