--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : matanmazor
+  username               : mazormatan
 facebook:
   username               :
   app_id                 :
