drop e from mastodone

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   facebook         :
   foursquare       :
   github           : "matanmazor"
-  mastodone        : "c.im/@matan"
+  mastodon        : "c.im/@matan"
   gitlab           :
   google_plus      :
   keybase          :
