london changed to oxford

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   name             : "Matan Mazor"
   avatar           : "profile.png"
   bio              : "PhD student"
-  location         : "London, UK"
+  location         : "Oxford, UK"
   employer         :
   pubmed           :
   orcid            : #"http://orcid.org/0000-0001-9259-3883"
